- Implemented reservations rest controller - DB Statuses are now enums rather than just strings - Introduced GET /reservations
